--- a/etl/ConvertCombine-jsontocsv/load-sqs.ipynb
+++ b/etl/ConvertCombine-jsontocsv/load-sqs.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Notebook for Loading SQS with Messages for Lambda Processing\n",
     "\n",
-    "The Million Song Dataset comes with a set of files that contain the data in the .h5 format. This isn't a format we're used to working with and doesn't work well with many of the tools we use. Ideally we'd prefer the data in csv, json or parquet format.\n",
+    "The Million Song Dataset has an associated fileset of links for each song in JSON format. It's a nested format that's not very  useful for processing. We need it to be in a CSV format for easy processing.\n",
     "\n",
-    "So in order to accomplish that we've built a serverless function that will take data from one S3 bucket that's in .h5 format and combine the files and convert them to csv format. The way we initiate that function is through an SQS queue. The benefit of this is that the load processes can co-currently and asyrchronously process the data.\n",
+    "So in order to accomplish that we've built a serverless function that will take data from one S3 bucket that's in JSON format and combine the files and convert them to csv format. The way we initiate that function is through an SQS queue. The benefit of this is that the load processes can co-currently and asyrchronously process the data.\n",
     "\n",
     "This notebook reviews the files in the first S3 bucket and then parses their names/key values and then batches in them in SQS messages 2,000 records at a time."
    ]
@@ -47,7 +47,7 @@
    "source": [
     "## Clean up the files for processing\n",
     "\n",
-    "We only want to process files that are the .h5 extension anything else is outside the scope of this function. We also want to avoid anything in the AdditionalFiles directory because those files have a different schema than the files in the data directory"
+    "We only want to process files that are the  JSON extension anything else is outside the scope of this function."
    ]
   },
   {
