--- a/etl/Convert-AdditionalFiles.ipynb
+++ b/etl/Convert-AdditionalFiles.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,32 @@
     "conn.close()\n",
     "\n",
     "os.remove('track_metadata.db')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lyrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3.download_file('millionsongdataset-associateddatasets', 'mxm_dataset.db', 'mxm_dataset.db')\n",
+    "\n",
+    "conn = sqlite3.connect('mxm_dataset.db')\n",
+    "\n",
+    "lyrics = pd.read_sql_query(\"SELECT * FROM lyrics\", conn)\n",
+    "\n",
+    "lyrics.to_csv(f's3://{destination_bucket}/lyrics/lyrics.csv', index = False)\n",
+    "\n",
+    "conn.close()\n",
+    "\n",
+    "os.remove('mxm_dataset.db')"
    ]
   }
  ],
