with five features and genre

--- a/notebook/skeleton_notebook-run1.ipynb
+++ b/notebook/skeleton_notebook-run1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -47,18 +47,15 @@
       "  from cryptography.utils import int_from_bytes\n",
       "/opt/conda/lib/python3.7/site-packages/secretstorage/util.py:25: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
       "  from cryptography.utils import int_from_bytes\n",
-      "Collecting PyAthena\n",
-      "  Using cached PyAthena-2.5.2-py3-none-any.whl (40 kB)\n",
-      "Requirement already satisfied: tenacity>=4.1.0 in /opt/conda/lib/python3.7/site-packages (from PyAthena) (8.0.1)\n",
+      "Requirement already satisfied: PyAthena in /opt/conda/lib/python3.7/site-packages (2.5.2)\n",
       "Requirement already satisfied: botocore>=1.5.52 in /opt/conda/lib/python3.7/site-packages (from PyAthena) (1.23.23)\n",
       "Requirement already satisfied: boto3>=1.4.4 in /opt/conda/lib/python3.7/site-packages (from PyAthena) (1.20.23)\n",
+      "Requirement already satisfied: tenacity>=4.1.0 in /opt/conda/lib/python3.7/site-packages (from PyAthena) (8.0.1)\n",
       "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.7/site-packages (from boto3>=1.4.4->PyAthena) (0.10.0)\n",
       "Requirement already satisfied: s3transfer<0.6.0,>=0.5.0 in /opt/conda/lib/python3.7/site-packages (from boto3>=1.4.4->PyAthena) (0.5.0)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.7/site-packages (from botocore>=1.5.52->PyAthena) (2.8.1)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.7/site-packages (from botocore>=1.5.52->PyAthena) (1.26.7)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.5.52->PyAthena) (1.14.0)\n",
-      "Installing collected packages: PyAthena\n",
-      "Successfully installed PyAthena-2.5.2\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
       "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.4 is available.\n",
       "You should consider upgrading via the '/opt/conda/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.cluster import KMeans,DBSCAN, SpectralClustering\n",
+    "from sklearn.cluster import KMeans,DBSCAN, SpectralClustering, MiniBatchKMeans\n",
     "from sklearn.metrics import silhouette_score, calinski_harabasz_score\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.decomposition import SparsePCA\n",
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,34 +115,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Data\n",
+    "### Getting Data\n",
     "* Only getting 2000 records (remove the limit for full set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'df' (DataFrame)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "conn = connect(s3_staging_dir='s3://athena-results-c7fhgh8/',\n",
-    "               region_name='us-east-1')\n",
+    "### UNCOMMENT THE LOGIC BELOW ON THE FIRST RUN###\n",
+    "# conn = connect(s3_staging_dir='s3://athena-results-c7fhgh8/',\n",
+    "#                region_name='us-east-1')\n",
     "\n",
-    "df = pd.read_sql(\"select * from \\\"millionsongdataset-intermediate\\\".songdata;\", conn)\n",
-    "%store df"
+    "# df = pd.read_sql(\"select * from \\\"millionsongdataset-intermediate\\\".songdata;\", conn)\n",
+    "# %store df\n",
+    "%store -r df   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +145,7 @@
        "(1000000, 53)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -236,7 +227,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +547,7 @@
        "[8 rows x 42 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -631,7 +622,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -706,7 +697,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +721,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -753,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +757,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -789,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +793,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -825,19 +816,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bodies': [<matplotlib.collections.PolyCollection at 0x7fd720d1e9d0>],\n",
-       " 'cmaxes': <matplotlib.collections.LineCollection at 0x7fd720d1e790>,\n",
-       " 'cmins': <matplotlib.collections.LineCollection at 0x7fd720d29e10>,\n",
-       " 'cbars': <matplotlib.collections.LineCollection at 0x7fd720d34dd0>}"
+       "{'bodies': [<matplotlib.collections.PolyCollection at 0x7f850ab789d0>],\n",
+       " 'cmaxes': <matplotlib.collections.LineCollection at 0x7f850ab78890>,\n",
+       " 'cmins': <matplotlib.collections.LineCollection at 0x7f850ab78b50>,\n",
+       " 'cbars': <matplotlib.collections.LineCollection at 0x7f850ab78b90>}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -860,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +863,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,13 +968,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "feature_pipeline = Pipeline([\n",
     "    (\"processor\", transformers),\n",
-    "    (\"kmeans_modeller\", KMeans(random_state=1))\n",
+    "    (\"kmeans_modeller\",  MiniBatchKMeans(random_state=1))\n",
     "])"
    ]
   },
@@ -996,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,21 +996,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_df_1 = filtered_df_1[~filtered_df_1.index.isin(train_indices)]\n",
     "train_df_1 = filtered_df_1[filtered_df_1.index.isin(train_indices)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store -r df"
    ]
   },
   {
@@ -1031,11 +1013,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('processor',\n",
+       "                 ColumnTransformer(n_jobs=None, remainder='drop',\n",
+       "                                   sparse_threshold=0.3,\n",
+       "                                   transformer_weights=None,\n",
+       "                                   transformers=[('scaler_process',\n",
+       "                                                  Pipeline(memory=None,\n",
+       "                                                           steps=[('imputer',\n",
+       "                                                                   SimpleImputer(add_indicator=False,\n",
+       "                                                                                 copy=True,\n",
+       "                                                                                 fill_value=0,\n",
+       "                                                                                 missing_values=nan,\n",
+       "                                                                                 strategy='constant',\n",
+       "                                                                                 verbose=0)),\n",
+       "                                                                  ('scaler',\n",
+       "                                                                   StandardScaler(copy=True,\n",
+       "                                                                                  wi...\n",
+       "                                                                                 drop=None,\n",
+       "                                                                                 dtype=<class 'numpy.float64'>,\n",
+       "                                                                                 handle_unknown='error',\n",
+       "                                                                                 sparse=True))],\n",
+       "                                                           verbose=False),\n",
+       "                                                  ['genre'])],\n",
+       "                                   verbose=False)),\n",
+       "                ('kmeans_modeller',\n",
+       "                 MiniBatchKMeans(batch_size=100, compute_labels=True,\n",
+       "                                 init='k-means++', init_size=None, max_iter=100,\n",
+       "                                 max_no_improvement=10, n_clusters=8, n_init=3,\n",
+       "                                 random_state=1, reassignment_ratio=0.01,\n",
+       "                                 tol=0.0, verbose=0))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_pipeline.fit(train_df_1)"
    ]
@@ -1049,12 +1072,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feat_selection_kmeans = feature_pipeline['kmeans_modeller']\n",
-    "feat_selection_dbscan = feature_pipeline['dbscan_modeller']"
+    "feat_selection_kmeans = feature_pipeline['kmeans_modeller']\n"
    ]
   },
   {
@@ -1066,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,29 +1111,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18527644951703953"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "silhouette_score(transformed_train_df_1, feat_selection_kmeans.labels_, metric='euclidean',sample_size=int(train_df_1.shape[0]*0.3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "148918.33790704203"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "calinski_harabasz_score(transformed_train_df_1.toarray(), feat_selection_kmeans.labels_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7], dtype=int32)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kmeans_classes = np.unique(feat_selection_kmeans.labels_)"
+    "kmeans_classes = np.unique(feat_selection_kmeans.labels_)\n",
+    "kmeans_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'centers' (ndarray)\n"
+     ]
+    }
+   ],
+   "source": [
+    "centers=feat_selection_kmeans.cluster_centers_\n",
+    "\n",
+    "### UNCOMMENT LOGIC BELOW ON FIRST RUN###\n",
+    "#%store centers\n",
+    "\n",
+    "store -r centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 6040)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centers.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.96365508e+00, -6.14863112e-01, -2.84221585e-02, ...,\n",
+       "        9.01144453e-05,  9.01144453e-05,  0.00000000e+00])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centers[-1]\n"
    ]
   },
   {
@@ -1119,9 +1238,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "feat_selection_kmeans.cluster_centers_"
-   ]
+   "source": []
   }
  ],
  "metadata": {
