--- a/model/RunSagemakerModel.ipynb
+++ b/model/RunSagemakerModel.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix Calculator With Clusters"
+    "# Matrix Calculator With Clusters\n",
+    "\n",
+    "This uses Sagemaker to run the model as a Processing Job on a very large server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# role = get_execution_role()\n",
     "\n",
-    "sklearn_processor = SKLearnProcessor(framework_version = '0.20.0',\n",
-    "                                     role = \"AmazonSageMaker-ExecutionRole-20211115T123876\",\n",
-    "                                     instance_type = 'ml.m5.24xlarge',\n",
+    "sklearn_processor = SKLearnProcessor(framework_version = '0.20.0', # Specify Version of Scikit-learn\n",
+    "                                     role = \"AmazonSageMaker-ExecutionRole-20211115T123876\", # Specify Role Created for Security\n",
+    "                                     instance_type = 'ml.m5.24xlarge', # Specify Instance Type\n",
     "                                     instance_count = 1)"
    ]
   },
@@ -41,28 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Job Name:  sagemaker-scikit-learn-2022-04-16-19-26-44-105\n",
-      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-269905429211/sagemaker-scikit-learn-2022-04-16-19-26-44-105/input/input-1/songdata.csv', 'LocalPath': '/opt/ml/processing/input', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-269905429211/sagemaker-scikit-learn-2022-04-16-19-26-44-105/input/code/processing.py', 'LocalPath': '/opt/ml/processing/input/code', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
-      "Outputs:  [{'OutputName': 'songlist', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-269905429211/sagemaker-scikit-learn-2022-04-16-19-26-44-105/output/songlist', 'LocalPath': '/opt/ml/processing/output', 'S3UploadMode': 'EndOfJob'}}]\n",
-      "........................../miniconda3/lib/python3.7/site-packages/sklearn/externals/joblib/externals/cloudpickle/cloudpickle.py:47: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
-      "  import imp\n",
-      "Pulling CSV\n",
-      "Creating Dataframe\n",
-      "(433184, 9)\n",
-      "Running Kmeans\n",
-      "Processing Data\n",
-      "Run KMeans\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sklearn_processor.run(code='processing.py', #This script does all the processing, make changes here\n",
     "                      inputs=[ProcessingInput(\n",
